# pos_arch

./: .gitignore  README.md
.github/workflows/: cd-migrations.yml  ci-analytics.yml  ci-auth.yml  ci-destroy.yml  ci-documentation.yml  ci-donation.yml  ci-evaluation.yml  ci-flag.yml  ci-infra.yml  ci-ngo.yml  ci-targeting.yml  ci-volunteer.yml  destroy.yml  fase_3_2_aula_ci-matrix.yml  fase_3_2_aula_ci-reusable.yml  fase_3_3_aula_docker-build.yml  fase_3_3_aula_k8s-deploy.yml  fase_3_5_aula_modules.yml  fase_3_5_aula_terraform-ci.yml  fase_3_6_aula_sam-pipeline-multi-env.yml  fase_3_6_aula_sam-pipeline.yml  fase_3_ci-basico.yml  fase_3_ci-completo.yml  fase_3_ci-matrix.yml  fase_3_ci-multistage.yml  fase_3_ci-reusable.yml  iaac.yml  reusable-test.yml  self-healing.yml  tc_fase_3_build_and_push.yaml
.github/workflows/fase_3/: ci-analytics.yml  ci-destroy.yml  ci-evaluation.yml  ci-flag.yml
.github/workflows/fase_4/: ci-infra.yml
.github/workflows/hands_on/: fase_3_3_aula_k8s-deploy.yml  fase_3_6_aula_sam-pipeline.yml  skip_test.yml
.github/workflows/hands_on/ci_cd/: fase_3_2_aula_ci-multistage.yml
.github/workflows/tech_challenge/: tc_fase_3_build_and_push.yaml
fase_1/tech_challenge/doc/: 0_ARQUITETURA.md  1_EC2_STEPS.md  2_RESULT.md  Insomnia_collection.yaml  arquitetura.drawio
fase_1/tech_challenge/toggle-master-monolith/: Dockerfile  README.md  app.py  docker-compose.yaml  entrypoint.sh  init-aws.sh  requirements.txt
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/01 app health/: Cargo.toml  DEMO_SCRIPT.md  Dockerfile  IMPLEMENTATION_STEPS.md  README.md
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/01 app health/k8s/base/: deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  prometheus.yaml  service.yaml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/01 app health/k8s/overlays/burstable/: kustomization.yaml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/01 app health/k8s/overlays/guaranteed/: kustomization.yaml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/01 app health/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/05 blue green/orchestrator/: Cargo.toml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/05 blue green/orchestrator/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/06 canary/canaryctl/: Cargo.toml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/06 canary/canaryctl/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/07 karpenter/rust-controller/: Cargo.toml  Dockerfile
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/07 karpenter/rust-controller/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/08 keda/publisher/: Cargo.toml  Dockerfile
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/08 keda/publisher/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/08 keda/worker/: Cargo.toml  Dockerfile
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/08 keda/worker/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/: Cargo.toml  README.md
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/crates/orchestrator/: Cargo.toml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/crates/orchestrator/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/crates/service-a/: Cargo.toml  Dockerfile
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/crates/service-a/src/: main.rs
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/docs/: PASSO-A-PASSO.md  ROTEIRO.md
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/k8s-manifests/: service-a-deployment.yaml  service-a-service.yaml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/k8s-manifests/analytics/: namespace.yaml  pod.yaml  rbac.yaml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/k8s-manifests/cert-manager/: issuers-and-certs.yaml
fase_2/aulas/3_Kubernetes_avancado/hands_on/k8savancado/09 security/scripts/: create-ca-configmap.sh  kind-load-image.sh
fase_2/tech_challenge/doc/: 0_ARQUITETURA.md  0_REQUISITOS.md  Insomnia_2025-11-09.yaml  Insomnia_2025-11-16.yaml  Insomnia_2025-11-20.yaml  arquitetura.drawio  exec.md
fase_2/tech_challenge/toggle-master-microservices/: docker-compose.yaml  init-aws.sh
fase_3/aulas/1_ci_cd/hands_on/1_aula/: README.md  (+2 more)
fase_3/tech_challenge/doc/: 0_REQUISITOS.md  1_README.md  arquitetura.drawio
fase_4/tech_challenge/doc/: 0_REQUISITOS.md  1_README.md  2_DECISOES.md
fase_5/tech_challenge/doc/: 0_REQUISITOS.md  1_MELHORIAS.md  2_LEMBRETE.md  2_SRE.md  3_FORECAST.md  4_RIGHTSIZING.md  5_ITSM_AIOps.md  run.md
fase_5/tech_challenge/donation-ms/: docker-compose.yml  init-aws.sh
files/: cria_pastas.sh
(+660 files in other folders)
