[package]
name = "app-health-demo"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Kubernetes application health and resource management demo in Rust (axum + Prometheus)"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
hyper = { version = "1", features = ["server"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "catch-panic"] }
rand = "0.8"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
parking_lot = "0.12"
