[package]
name = "mini-karpenter-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["FIAP Aula 07"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
kube = { version = "0.88", features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1"
lazy_static = "1"
thiserror = "1"
indexmap = "=2.11.0"
